cursos/desafio-final-dk8s/aulas/apresentacao-do-desafio-final-dk8s/projetos/desafio-final-dk8s/semana-4/k8s/tipsbank-transacoes/ingress-api-transacoes.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-api-transacoes
  namespace: tipsbank-transacoes
  annotations:
    cert-manager.io/cluster-issuer: selfsigned-issuer
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/use-regex: "true"
    # Affinity Cookie: transferências da mesma sessão sempre caem no mesmo pod.
    # Garante consistência de estado durante uma sequência de operações financeiras.
    nginx.ingress.kubernetes.io/affinity: "cookie"
    nginx.ingress.kubernetes.io/session-cookie-name: "TIPSBANK_ROUTE"
    nginx.ingress.kubernetes.io/session-cookie-expires: "172800"
    nginx.ingress.kubernetes.io/session-cookie-max-age: "172800"
    nginx.ingress.kubernetes.io/session-cookie-change-on-failure: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - api.tipsbank.local
      secretName: tipsbank-api-tls
  rules:
    - host: api.tipsbank.local
      http:
        paths:
          - path: /transacoes(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: api-transacoes
                port:
                  number: 8080
